remove url from input

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <img src="images/yojimbo.jpg" alt="Avatar do Yojimbo" class="main-logo">
             <blockquote class="quote" cite="Yojimbo quote, by Akira Kurosawa">There's no cure for Fools</blockquote>
         </div>
-        <input type="text" name="url" value=" https://foxlustres.com/pt/produtos/pendente/167" placeholder="Insira a URL">
+        <input type="text" name="url" value="" placeholder="Insira a URL">
         <button>ENVIAR</button>
 
         <!-- TODO: listar alt/title além do filename -->
